# tfdiff

./: .dockerignore  .gitignore  BUILD_STATUS.md  Cargo.toml  Dockerfile  Makefile  README.md  Testing.md  Tfdiff.md  check_project.sh
.github/workflows/: ci.yml
benches/: parser_bench.rs
proptest-regressions/integration/: property_tests.txt
src/: lib.rs  main.rs
src/formatter/: html.rs  json.rs  markdown.rs  mod.rs  terminal.rs
src/models/: mod.rs
src/parser/: cleaner.rs  diff.rs  mod.rs  terraform.rs
src/ui/: mod.rs  terminal.rs  web.rs
tests/: lib.rs
tests/common/: mod.rs
tests/fixtures/: generate_fixtures.rs
tests/fixtures/edge_cases/: ansi_codes.txt  cdk_prefix.txt  large_plan.txt
tests/fixtures/malformed/: corrupted_json.txt  incomplete_plan.txt
tests/fixtures/providers/aws/: s3_lifecycle.txt
tests/fixtures/providers/kubernetes/: deployment.txt
tests/fixtures/terraform/: apply_output.txt  complex_aws_infrastructure.txt  complex_update.txt  destroy_plan.txt  interleaved_output.txt  kubernetes_microservices.txt  module_plan.txt  multi_cloud_enterprise.txt  plan.json  simple_plan.txt
tests/integration/: cli_test.rs  file_processing_test.rs  mod.rs  property_tests.rs
tests/unit/: mod.rs
tests/unit/formatter/: html_test.rs  json_test.rs  markdown_test.rs  mod.rs  terminal_test.rs
tests/unit/models/: mod.rs  serialization_test.rs
tests/unit/parser/: cleaner_test.rs  diff_test.rs  interleaved_test.rs  mod.rs  terraform_test.rs
