[package]
name = "tfdiff"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A beautiful console tool for displaying Terraform plan and apply diffs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/tfdiff"
keywords = ["terraform", "diff", "console", "cli", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
colored = "2.1"
unicode-width = "0.1"
term_size = "0.3"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
notify = "6.0"
indicatif = "0.17"
comfy-table = "7.0"
similar = "2.3"
syntect = "5.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
insta = "1.34"
proptest = "1.4"
criterion = "0.5"
mockall = "0.12"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[[bin]]
name = "tfdiff"
path = "src/main.rs"